admin products page

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>Welcome to Admin Space!</h1>
 
-    <p class="text-center">Please you can click on the link on your left, so you can start on administrating the site.</p>
+    <p class="text-left">Please you can click on the link on your left, so you can start on administrating the site.</p>
 {% endblock %}
