--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -42,7 +42,7 @@
                     <nav>
                         <ul class="pt-3">
                             <li class="py-2"><a href="{{ path('admin') }}" class="text-light" title="Admin Space"><i class="bi bi-house fs-4"></i></a></li>
-                            <li class="py-2"><a href="#" class="text-light" title="Products"><i class="bi bi-dice-5 fs-4"></i></a></li>
+                            <li class="py-2"><a href="{{ path('admin_products') }}" class="text-light" title="Products"><i class="bi bi-dice-5 fs-4"></i></a></li>
                             <li class="py-2"><a href="#" class="text-light" title="Category"><i class="bi bi-tags fs-4"></i></a></li>
                             <li class="py-2"><a href="#" class="text-light" title="Users"><i class="bi bi-people fs-4"></i></a></li>
                             <li class="py-2"><a href="{{ path('home') }}" class="text-light" title="Home Site"><i class="bi bi-house fs-4"></i></a></li>
