--- a/templates/product/adminList.html.twig
+++ b/templates/product/adminList.html.twig
@@ -1,35 +1,38 @@
-{% extends 'baseAdmin.html.twig' %}
+{% extends "baseAdmin.html.twig" %}
 
-{% block title %}Products {% endblock %}
+{% block title %}Products{% endblock %}
 
 {% block body %}
 
-<h1 class="pb-6">List of Products</h1>
+    <h1 class="pb-5">List of Products</h1>
 
-<table class="table table-hover table-sm text-center align-middle">
-    <thead>
-        <tr>
-            <th>N°</th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for product in products|reverse %}
+    <table class="table table-hover table-sm texxt-center align-middle text-center">
+        <thead>
             <tr>
-                <td>{{ loop.revindex }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.price|number_format(2, ',', ' ') }} €</td>
-                <td><img src="{{ asset('img/products/f1.jpg') }}" alt =" image of product {{product.name}}"></td>
-                <td>
-                    <a href="#">edit</a>
-                    <a href="#">del</a>
-                </td>
+                <th>N°</th>
+                <th>Nom</th>
+                <th>Prix</th>
+                <th>Catégorie</th>
+                <th>Actions</th>
             </tr>
-        {% endfor %}
-    </tbody>
+        </thead>
+        <tbody>
+            {% for product in products|reverse %}
+                <tr>
+                    <td>{{ loop.revindex }}</td>
+                    <td class="text-start"><img src="{{ asset('img/product/' ~ product.img1) }}" alt="image principale du jeu {{ product.name }}" class="pe-3"> {{ product.name }}</td>
+                    <td>{{ product.price|number_format(2, ',', ' ') }} €</td>
+                    <td>
+                        <a href="{{ path('product_update', {'id': product.id}) }}"><i class="bi bi-pencil-square text-primary"></i></a>
+                        <a href="{{ path('product_delete', {'id': product.id}) }}"><i class="bi bi-trash3 text-danger"></i></a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-</table>
-
+    <div class="text-end mt-4">
+        <a href="{{ path('product_create') }}" class="btn btn-success">Ajouter un produit</a>
+    </div>
+    
 {% endblock %}
