--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,7 +320,7 @@ body {
 }
 
 #banner {
-    background-image: url("img/banner/b2.jpg");
+    background-image: url("../img/banner/b2.jpg");
     width: 100%;
     height: 40vh;
     background-size: cover;
@@ -359,7 +359,7 @@ body {
 }
 
 #sm-banner .banner-box {
-    background-image: url("img/banner/b17.jpg");
+    background-image: url("../img/banner/b17.jpg");
     min-width: 580px;
     height: 50vh;
     background-size: cover;
@@ -372,7 +372,7 @@ body {
 }
 
 #sm-banner .banner-box2 {
-    background-image: url("img/banner/b10.jpg");
+    background-image: url("../img/banner/b10.jpg");
 }
 
 #sm-banner h4 {
@@ -409,7 +409,7 @@ body {
 }
 
 #banner3 .banner-box {
-    background-image: url("img/banner/b7.jpg");
+    background-image: url("../img/banner/b7.jpg");
     min-width: 30%;
     height: 30vh;
     background-size: cover;
@@ -423,11 +423,11 @@ body {
 }
 
 #banner3 .banner-box2 {
-    background-image: url("img/banner/b4.jpg");
+    background-image: url("../img/banner/b4.jpg");
 }
 
 #banner3 .banner-box3 {
-    background-image: url("img/banner/b18.jpg");
+    background-image: url("../img/banner/b18.jpg");
 }
 
 #banner3 h2 {
@@ -443,7 +443,7 @@ body {
 }
 
 #newsletter {
-    background-image: url("img/banner/b14.png");
+    background-image: url("../img/banner/b14.png");
     background-repeat: no-repeat;
     background-position: 20% 30%;
     background-color: #041e42;
