--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -4,14 +4,14 @@
     <head>
 
         <meta charset="UTF-8">
-        <meta name="author" content="David HURTREL">
+        <meta name="author" content="Micael Santos">
         <meta http-equiv="X-UA-Compatible" content="IE=7">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="boutique magasin en ligne vente jeux de société">
-        <meta name="description" content="espace administrateur du site Table Top Games">
+        <meta name="keywords" content="E-commerce Site">
+        <meta name="description" content="Admin Space Blindr 2.0">
 
-        <title>TTG - admin - {% block title %}{% endblock %}</title>
+        <title>Blindr2.0 - admin - {% block title %}{% endblock %}</title>
 
         <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
