--- a/templates/_partials/header.html.twig
+++ b/templates/_partials/header.html.twig
@@ -6,10 +6,11 @@
             <div>
                 <ul id="navbar">
                     <li><a class="nav-link" href="{{ path('home') }}">Home</a></li>
-                    <li><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li><a class="nav-link" href="about.html">About</a></li>
-                    <li><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li><a class="nav-link" href="{{ path('shop') }}">Shop</a></li>
+                    <li><a class="nav-link" href="{{ path('blog') }}">Blog</a></li>
+                    <li><a class="nav-link" href="{{ path('about') }}">About</a></li>
+                    <li><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
+                    <li><a class="nav-link" href="{{ path('register')}}">Sign In</a></li>
                     <li><a class="nav-link" href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                     <a href="" id="close"><i class="far fa-times"></i></a>
                 </ul>
