--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Products{% endblock %}
 
 {% block body %}
-
-
-
-
 
 {% endblock %}
