--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -1,155 +1,136 @@
 {% extends "baseAdmin.html.twig" %}
 
-{% block title %}{{ app.request.attributes.get('_route') == 'product_create' ? 'création' : 'modification' }} produit{% endblock %}
+{% block title %}{{ app.request.attributes.get('_route') == 'product_create' ? 'création' : 'modification' }} Product{% endblock %}
 
 {% block body %}
 
-    <h1 class="mb-5">{{ app.request.attributes.get('_route') == 'product_create' ? 'Créer' : 'Modifier' }} un produit</h1>
+    <h1 class="mb-5">{{ app.request.attributes.get('_route') == 'product_create' ? 'Create' : 'Modify' }} a product</h1>
 
     {# {{ form(productForm) }} #}
 
     {{ form_start(productForm) }}
 
-        <div class="row">
-            <div class="col-6">
-                {# {{ form_row(productForm.name) }} #}
-                {{ form_label(productForm.name, 'Nom') }}
-                {{ form_errors(productForm.name) }}
-                {{ form_widget(productForm.name, {
-                    'attr': {
-                        'placeholder': 'Ex.: David'
-                    }
-                }) }}
-                {{ form_help(productForm.name) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.quantity, {
-                    'label': 'Quantité',
-                    'attr': {
-                        'placeholder': 'Ex.: 12'
-                    }
-                }) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.price, {
-                    'label': 'Prix (en €)',
-                    'attr': {
-                        'placeholder': 'Ex.: 123.45'
-                    }
-                }) }}
-            </div>
+    <div class="row">
+        <div class="col-6">
+            {#{ form_row(productForm.name) }#}
+            {{form_label(productForm.name, 'Name')}}
+            {{form_errors(productForm.name) }}
+            {{form_widget(productForm.name, {
+            'attr' :{
+            'placeholder' : 'ex: Micael'
+            }
+            }) }}
+            {{ form_help(productForm.name) }}
         </div>
-
-        <div class="row">
-            <div class="col-6">
-                {{ form_row(productForm.abstract, {
-                    'label': 'Résumé',
-                    'attr': {
-                        'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
-                    }
-                }) }}
-            </div>
-            <div class="col-6">
-                {{ form_row(productForm.description, {
-                    'label': 'Description',
-                    'attr': {
-                        'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
-                    }
-                }) }}
-            </div>
+        <div class="col-3">
+            {{ form_row(productForm.quantity, {
+            'label': 'Quantity',
+            'attr': {
+            placeholder: 'Ex: 3'
+            }
+            }) }}
         </div>
-
-        <div class="row">
-            <div class="col">
-                {{ form_row(productForm.min_players, {
-                    'label': 'Joueurs minimum',
-                    'attr': {
-                        'placeholder': 'Ex.: 1'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.max_players, {
-                    'label': 'Joueurs maximum',
-                    'attr': {
-                        'placeholder': 'Ex.: 2'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.minimum_age, {
-                    'label': 'Âge minimum',
-                    'attr': {
-                        'placeholder': 'Ex.: 3'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.duration, {
-                    'label': 'Durée'
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.editor, {
-                    'label': 'Éditeur',
-                    'attr': {
-                        'placeholder': 'Ex.: David'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.category, {
-                    'label': 'Catégorie',
-                    'placeholder': '-- sélectionner --'
-                }) }}
-            </div>
+        <div class="col-3">
+            {{form_row(productForm.price, {
+            'label' :'Price (en €)',
+            'attr': {
+            'placeholder' : 'Ex.: 122.25',
+            'min' : 0
+            }
+            }) }}
         </div>
-
-        <div class="row">
-            <div class="col-6">
-                {{ form_row(productForm.theme, {
-                    'label': 'Thème(s)',
-                    'attr': {
-                        'placeholder': 'Ex.: France, guerre'
-                    }
-                }) }}
-            </div>
-            <div class="col-6">
-                {{ form_row(productForm.mecanism, {
-                    'label': 'Mécanisme(s)',
-                    'attr': {
-                        'placeholder': 'Ex.: placement, draft'
-                    }
-                }) }}
-            </div>
+    <div class="col-6">
+        {{ form_row(productForm.description, {
+        'label': 'Description',
+        'attr': {
+        'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero
+        aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi
+        sapiente dolorem ?'
+        }
+        }) }}
+    </div>
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.marque, {
+        'label': 'Brand',
+        'attr': {
+        'placeholder': 'Ex.: Micael'
+        }
+        }) }}
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.slug, {
+        'label': 'Slug',
+        'attr': {
+        'placeholder': 'Ex.: NameofProduct'
+        }
+        }) }}
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.img, {
+        'label': 'img',
+        'attr': {
+        'placeholder': 'Ex.: image'
+        }
+        }) }}
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.img2, {
+        'label': 'img2',
+        'attr': {
+        'placeholder': 'Ex.: image'
+        }
+        }) }}
+    </div>
+    <div class="col">
+        {{ form_row(productForm.img3, {
+        'label': 'img3',
+        'attr': {
+        'placeholder': 'Ex.: image'
+        }
+        }) }}
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.img4, {
+        'label': 'img4',
+        'attr': {
+        'placeholder': 'Ex.: image'
+        }
+        }) }}
+    </div>
+    
+    <div class="col">
+        {{ form_row(productForm.img5, {
+        'label': 'img5',
+        'attr': {
+        'placeholder': 'Ex.: image'
+        }
+        }) }}
+    </div>
+    
+    <div clas="col">
+        {{form_row(productForm.created_at, {
+            'label': 'creation',
+            'attr': {
+                'placeholder': 'Ex: When it was created the product'
+            }
+            })}}
+    </div>
+    
+    
+    <div class="row">
+        <div class="col-12 text-end my-3">
+            <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Delete</a>
+            {# app.request.attributes.get('_route') pour récupérer la route actuelle #}
+            <button class="btn btn-success">{{ app.request.attributes.get('_route') == 'product_create' ? 'Create' : 'Modify' }} </button>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-4">
-                {{ form_row(productForm.img1, {
-                    'label': 'Image principale (obligatoire)'
-                }) }}
-            </div>
-            <div class="col-4">
-                {{ form_row(productForm.img2, {
-                    'label': 'Image secondaire 1 (optionnel)'
-                }) }}
-            </div>
-            <div class="col-4">
-                {{ form_row(productForm.img3, {
-                    'label': 'Image secondaire 2 (optionnel)'
-                }) }}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 text-end my-3">
-                <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                {# app.request.attributes.get('_route') pour récupérer la route actuelle #}
-                <button class="btn btn-success">{{ app.request.attributes.get('_route') == 'product_create' ? 'Créer' : 'Modifier' }} </button>
-            </div>
-        </div>
-
-    {{ form_end(productForm) }}
+{{ form_end(productForm) }}
 
 {% endblock %}
