--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -37,7 +37,7 @@
         </div class="row">
         <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4 offset-lg-2">
             {{ form_row(registrationForm.pays, {
-                label:'pays'
+                label:'Country'
             })}}
         
         </div> 
