access controller and role hierarchy

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Home Admin{% endblock %}
 
 {% block body %}
-    <h1>Welcome to Admin Space!</h1>
+    <h1>Welcome {{ app.user.firstName }}</h1>
 
-    <p class="text-left">Please you can click on the link on your left, so you can start on administrating the site.</p>
+    <p class="text-left">Please you can click on the menu on your left, so you can start on administrating the site.</p>
 {% endblock %}
