--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -27,7 +27,8 @@
     </div>
     <div class="col">
         <h4>My Account</h4>
-        <a href="#">Sign In</a>
+        <a href="#">Sign out</a>
+        <a href="#">Sign in</a>
         <a href="#">View Cart</a>
         <a href="#">My Wishlist</a>
         <a href="#">Track My Order</a>
