--- a/templates/_partials/header.html.twig
+++ b/templates/_partials/header.html.twig
@@ -10,8 +10,15 @@
                     <li><a class="nav-link" href="{{ path('blog') }}">Blog</a></li>
                     <li><a class="nav-link" href="{{ path('about') }}">About</a></li>
                     <li><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
-                    <li><a class="nav-link" href="{{ path('register')}}">Sign In</a></li>
+                    {% if app.user %}
+                    <li><a class="nav-link" href="{{ path('logout')}}">Sign out</a></li>
+                    {% else %}
+                    <li><a class="nav-link" href="{{ path('login')}}">Sign In</a></li>
+                    {% endif %}
                     <li><a class="nav-link" href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li><a class="nav-link" href="{{path('admin') }}">Admin</a></li>
+                    {% endif %}
                     <a href="" id="close"><i class="far fa-times"></i></a>
                 </ul>
             </div>
